# launchpad

./: .gitignore  Cargo.toml  diesel.toml
launchpad-cli/: Cargo.toml
launchpad-cli/launchpad-src/migrations/2024-07-29-075011_create_users_table/: up.sql
launchpad-cli/launchpad-src/src/server/controllers/: auth_controller.rs  mod.rs
launchpad-cli/launchpad-src/src/server/guards/: api_token.rs
launchpad-cli/launchpad-src/src/server/responses/: mod.rs
launchpad-cli/launchpad-src/src/server/routes/: users.rs
launchpad-cli/src/: main.rs
launchpad-macros/: Cargo.toml
launchpad-src/: Cargo.toml
launchpad-src/migrations/2024-07-29-075247_create_access_token_table/: up.sql
launchpad-src/src/: schema.rs
launchpad-src/src/db/: mod.rs
launchpad-src/src/models/: user.rs
launchpad-src/src/server/: catchers.rs  state.rs
launchpad-src/src/server/controllers/: auth_controller.rs
launchpad-src/src/server/fairings/: cors.rs
launchpad-src/src/server/guards/: api_token.rs  mod.rs
launchpad-src/src/server/routes/: authentication.rs  mod.rs  users.rs
launchpad-src/src/traits/: mod.rs
migrations/2024-07-29-075247_create_access_token_table/: down.sql
src/: main.rs
src/db/: mod.rs
src/models/: user.rs
src/server/: catchers.rs  mod.rs  state.rs
src/server/controllers/: AuthController.rs  auth_controller.rs
src/server/guards/: api_token.rs
src/server/responses/: mod.rs
src/server/routes/: authentication.rs  mod.rs  users.rs
src/traits/: mod.rs
