[package]
name = "launchpad"
authors = ["Ahmad Urabi"]
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.2", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
